--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Keras==2.4.3
 matplotlib==3.6.3
-numpy==1.19.5
+numpy==1.24.2
 rasterio==1.3.5
 scikit_learn==1.2.1
 scipy==1.10.0
 segmentation_models==1.0.1
-tensorflow==2.5.0
+keras==2.11.0
+tensorflow==2.11.0
+
